--- a/style.css
+++ b/style.css
@@ -11,4 +11,40 @@
     src: url(assets/font/Montserrat/Montserrat-Italic-VariableFont_wght.ttf);
 }
 
+*{
+    padding:0;
+    margin: 0;
+    box-sizing: border-box;
+    list-style: none;
+}
+
+body{
+    height: 100%;
+    font-family:  'Montserrat', sans-serif;
+    text-align: center;
+}
+nav ul{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 1100px;
+    margin:10px auto;
+    padding: 10px;
+}
+ nav li{
+    margin: 0 10px;
+    text-transform:uppercase;
+    font-weight: 800;
+    cursor: pointer;font-size: 1em;
+    transition: ease .4s;
+}
+
+nav li:not(:last-child):hover{
+    color: var(--color3);
+    
+}
+
+
+
+
 
