--- a/style.css
+++ b/style.css
@@ -1,50 +1,103 @@
-:root{
-    --color1: whitesmoke;
-    --color2:rgb(20, 19, 19);
-    --color3:blueviolet;
-    --color4:rgb(238,238,238);
-    --color5:rgb(241,241,241);
-    --color6:rgb(184, 184, 184);
+:root {
+  --color1: whitesmoke;
+  --color2: rgb(20, 19, 19);
+  --color3: blueviolet;
+  --color4: rgb(238, 238, 238);
+  --color5: rgb(241, 241, 241);
+  --color6: rgb(184, 184, 184);
 }
 @font-face {
-    font-family: 'Montserrat', sans-serif;
-    src: url(assets/font/Montserrat/Montserrat-Italic-VariableFont_wght.ttf);
+  font-family: "Montserrat", sans-serif;
+  src: url(assets/font/Montserrat/Montserrat-Italic-VariableFont_wght.ttf);
 }
 
-*{
-    padding:0;
-    margin: 0;
-    box-sizing: border-box;
-    list-style: none;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
+}
+button {
+  text-transform: uppercase;
+  padding: 0.6em;
+  letter-spacing: 5px;
+  background: transparent;
+  color: var(--color1);
+  font-weight: bold;
+  border: 1px solid;
+  transition: ease 0.5s;
+}
+button:hover {
+  background: var(--color1);
+  color: var(--color2);
 }
 
-body{
-    height: 100%;
-    font-family:  'Montserrat', sans-serif;
-    text-align: center;
+body {
+  height: 100%;
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
 }
-nav ul{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: 1100px;
-    margin:10px auto;
-    padding: 10px;
+nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 1100px;
+  margin: 10px auto;
 }
- nav li{
-    margin: 0 10px;
-    text-transform:uppercase;
-    font-weight: 800;
-    cursor: pointer;font-size: 1em;
-    transition: ease .4s;
-}
-
-nav li:not(:last-child):hover{
-    color: var(--color3);
-    
+nav li {
+  margin: 0 10px;
+  text-transform: uppercase;
+  font-weight: 800;
+  cursor: pointer;
+  font-size: 1em;
+  transition: ease 0.4s;
+  position: relative;
 }
 
+nav li:not(:last-child):hover {
+  color: var(--color3);
+}
 
+nav li:first-child:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: var(--color3);
+  transform: translateY(-10px);
+  left: 0;
+}
 
+nav li:first-child {
+  color: var(--color3);
+}
+nav li:last-child {
+  background: var(--color6);
+  padding: 5px;
+  border-radius: 150px;
+}
+header {
+  background: url(/assets/img/bg.jpg) center/cover;
+  color: var(--color1);
+  text-transform: uppercase;
+  padding: 10px;
+}
+.main-header #logo img {
+  width: 45%;
+}
+.main-header h1 {
+  font-weight: 600;
+  font-size: 1.3em;
+  margin: 20px auto;
+}
+.main-header button {
+  margin: 20px auto;
+  cursor: pointer;
+}
+.header-text p{
+    font-weight: bolder;
+    width: 60%;
+    margin: 25px auto;
+    line-height: 1.5em;
 
-
+}
