--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@
 button {
   text-transform: uppercase;
   padding: 0.6em;
-  letter-spacing: 5px;
   background: transparent;
   color: var(--color1);
   font-weight: bold;
@@ -93,24 +92,46 @@ header {
 .main-header button {
   margin: 20px auto;
   cursor: pointer;
+  letter-spacing: 5px;
 }
 .header-text p{
     font-weight: bolder;
     width: 60%;
     margin: 25px auto;
     line-height: 1.5em;
+    padding: 10px;
 }
 
-.icon-part{
-    background: #151515;
+section.icon-part{
+    height: 100%;
+    background: #171717;
     color: var(--color1);
-    display: flex;
-    justify-content: center;
-   
+    padding: 10px;
 }
-.lip-logo{
-
-    margin: 0 auto;
+.icon-part-container{
     display: flex;
+    max-width: 1100px;
     justify-content: center;
+    margin: 20px auto;
+}
+.lip-logo img{
+    margin: 20px auto;
+
+}
+.list-icon-part h3{
+    text-transform: uppercase;
+    margin: 10px auto;
+}
+.list-icon-part p{
+    width: 80%;
+    margin: 5px auto;
+    font-weight: 700;
+
+}
+.list-icon-part{
+    margin: 10px auto;
+}
+.list-icon-part button{
+    margin: 10px auto;
+    cursor: pointer;
 }
