--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ nav ul {
 nav li {
   margin: 0 10px;
   text-transform: uppercase;
-  font-weight: 800;
+  font-weight: 850;
   cursor: pointer;
   font-size: 1em;
   transition: ease 0.4s;
@@ -85,7 +85,7 @@ header {
   background: url(/assets/img/bg.jpg) center/cover;
   color: var(--color1);
   text-transform: uppercase;
-  padding: 10px;
+  padding: 20px;
 }
 .main-header #logo img {
   width: 45%;
@@ -206,7 +206,6 @@ button i{
   font-size:1.1em;
   text-align: left;
   font-weight: bold;
-  
 }
 .link{
   position: absolute;
@@ -262,14 +261,11 @@ button i{
   font-size: 1em;
  }
  .contact-medias{
-  margin: 30px
-   0;
    text-align: left;
    display: grid;
    grid-template-columns:30% 70%;
    position: relative;
-   padding-top: 60px;
-
+   padding-top: 20px;
  }
  .contact-medias::after{
   content: "";
@@ -284,8 +280,32 @@ button i{
  .medias-text h3{
   text-transform: uppercase;
   line-height: 1.9em;
+  font-size: 1em;
+  font-weight: 800;
  }
  .medias-logos{
   align-self: center;
+ }
+ .medias-logos img{
+  margin: 0 8px;
+ }
+ footer{
+  background:var(--color2);
+ }
+ footer h3{
+  text-transform: uppercase;
+  color: var(--color1);
+  padding: 20px;
+ }
+ footer ul{
+  display: flex;
+  justify-content: center;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding-bottom: 20px;
+  align-items: center;
+ }
+ footer ul li{
+  margin: 0 10px;
  }
 
